--- a/components/Footer.css
+++ b/components/Footer.css
@@ -35,18 +35,17 @@
   }
   
   .footer-section ul li a {
-    color: #fff;
     text-decoration: none;
     transition: color 0.3s ease;
   }
   
-  .footer-section ul li a:hover {
+  /* .footer-section ul li a:hover {
     background-color: white;
     padding: 10px;
     border: 1px solid white;
     border-radius: 5px;
     color: hsl(209, 23%, 22%)
-  }
+  } */
   
   .footer-bottom {
     text-align: center;
@@ -70,3 +69,26 @@
   }
 
 
+  @media(max-width: 426px) {
+    .footer-content {
+      padding: unset;
+      margin-bottom: 10px;
+    }
+
+    .footer-section{
+      margin: unset;
+      margin-bottom: 5px;
+    }
+
+    .footer-section h2, p , ul{
+      margin: unset;
+    }
+
+    .footer-section ul li{
+      margin-bottom: unset;
+    }
+
+    .footer-section .social-media {
+      margin-left: unset;
+    }
+  }
